# emscripten-jspi-demo

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
scripts/: prepare.mts
src/wasm/: calc.cpp  calc.hpp  js-library.hpp  test1.cpp
src/web/: main.mts
types/: test1-wasm.d.ts
wasm-build/: js-library.js  post.js  pre.js
